# graphql_to_ocaml

./: GraphqlAPI.opam  README.md  design.md  dune-project  generator.opam  graphql_to_ocaml.opam  schema.ml
examples/hello/: dune  hello.ml  schema.graphql  schema.ml
examples/todo/: dune  schema.graphql  schema.ml  todo.ml
generator/src/: ast.ml  dune  gen.ml  gen.mli  lexer.mll  parser.mly  tokenizer.ml
generator/tests/: dune  parser.ml
graphql_to_ocaml/: cli.ml  dune
graphql_to_ocaml/doc/: dune  index.mld
test/: dune
